parser.output
   0  $accept : %entry% $end

   1  input : inputs File_end

   2  inputs :
   3         | inputs Module Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl RB3
   4         | inputs Module Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl RB3
   5         | inputs Model Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3
   6         | inputs Model Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3
   7         | inputs Model Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3
   8         | inputs Model Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3

   9  parameters :
  10             | Id Colon expr_type
  11             | Id Colon expr_type Comma parameters

  12  expr_type : LB1 I DotDot I RB1
  13            | Bool
  14            | LB3 scalars RB3
  15            | Id

  16  scalars :
  17          | Scalar Id
  18          | Scalar Id Comma scalars

  19  var_decl : Var LB3 vars RB3

  20  vars :
  21       | Id Colon expr_type Semicolon vars
  22       | Id Colon expr_type LB2 exp RB2 Semicolon vars

  23  symbol_decl : Define LB3 symbols RB3

  24  symbols :
  25          | symbols Id Assigno dexp Semicolon

  26  dexp : I
  27       | B
  28       | Id
  29       | Id LB2 dexp RB2
  30       | dnested_var
  31       | Scalar Id
  32       | Minus dexp
  33       | Nego dexp
  34       | dexp Equal dexp
  35       | dexp Non_equal dexp
  36       | dexp Ando dexp
  37       | dexp Oro dexp
  38       | dexp Add dexp
  39       | dexp Minus dexp
  40       | dexp Mult dexp
  41       | dexp Mod dexp
  42       | dexp LT dexp
  43       | dexp GT dexp
  44       | dexp LE dexp
  45       | dexp GE dexp
  46       | LB1 dexp RB1

  47  dnested_var : Id Dot Id
  48              | Id LB2 dexp RB2 Dot Id
  49              | Id Dot Id LB2 dexp RB2
  50              | Id LB2 dexp RB2 Dot Id LB2 dexp RB2
  51              | Id Dot dnested_var
  52              | Id LB2 dexp RB2 Dot dnested_var
  53              | LB1 dnested_var RB1

  54  init_decl : Init LB3 inis RB3

  55  inis :
  56       | Id Assigno exp Semicolon inis
  57       | Id Assigno LB3 exps RB3 Semicolon inis
  58       | Id Assigno Id LB1 exps RB1 Semicolon inis

  59  exps :
  60       | exp
  61       | exp Comma exps

  62  exp : I
  63      | B
  64      | Id
  65      | Id LB2 exp RB2
  66      | Id LB1 exp RB1
  67      | nested_var
  68      | Scalar Id
  69      | Minus exp
  70      | Nego exp
  71      | exp Equal exp
  72      | exp Non_equal exp
  73      | exp Ando exp
  74      | exp Oro exp
  75      | exp Add exp
  76      | exp Minus exp
  77      | exp Mult exp
  78      | exp Mod exp
  79      | exp LT exp
  80      | exp GT exp
  81      | exp LE exp
  82      | exp GE exp
  83      | LB1 exp RB1

  84  nested_var : Id Dot Id
  85             | Id LB2 exp RB2 Dot Id
  86             | Id Dot Id LB2 exp RB2
  87             | Id LB2 exp RB2 Dot Id LB2 exp RB2
  88             | Id Dot nested_var
  89             | Id LB2 exp RB2 Dot nested_var

  90  trans_decl : Transition LB3 trans RB3

  91  trans :
  92        | exp Colon LB3 rests RB3 Semicolon trans

  93  rests :
  94        | Id Assigno exp Semicolon rests
  95        | Id LB2 exp RB2 Assigno exp Semicolon rests

  96  fairness_decl : Fairness LB3 fairness RB3

  97  fairness :
  98           | Id LB1 Id RB1 Semicolon fairness
  99           | fml Semicolon fairness

 100  atomic_decl : Atomic LB3 atomics RB3

 101  atomics :
 102          | atomics Id LB1 bound_var RB1 Assigno exp Semicolon

 103  bound_var : bound_vars

 104  bound_vars :
 105             | Id
 106             | Id Comma bound_vars

 107  spec_decl : Spec LB3 specs RB3

 108  specs :
 109        | Id Assigno fml Semicolon specs

 110  fml : Top
 111      | Bottom
 112      | Id LB1 atom_fml_para RB1
 113      | Neg fml
 114      | fml And fml
 115      | fml Or fml
 116      | AX LB1 Id Comma fml Comma Id RB1
 117      | EX LB1 Id Comma fml Comma Id RB1
 118      | AF LB1 Id Comma fml Comma Id RB1
 119      | EG LB1 Id Comma fml Comma Id RB1
 120      | AR LB1 Id Comma Id Comma fml Comma fml Comma Id RB1
 121      | EU LB1 Id Comma Id Comma fml Comma fml Comma Id RB1
 122      | LB1 fml RB1

 123  atom_fml_para :
 124                | Id
 125                | Id Comma atom_fml_para

 126  %entry% : '\001' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . input  (126)
	inputs : .  (2)

	.  reduce 2

	input  goto 3
	inputs  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' input .  (126)

	.  reduce 126


state 4
	input : inputs . File_end  (1)
	inputs : inputs . Module Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl RB3  (3)
	inputs : inputs . Module Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl RB3  (4)
	inputs : inputs . Model Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs . Model Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs . Model Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs . Model Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)

	Module  shift 5
	Model  shift 6
	File_end  shift 7
	.  error


state 5
	inputs : inputs Module . Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl RB3  (3)
	inputs : inputs Module . Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl RB3  (4)

	Id  shift 8
	.  error


state 6
	inputs : inputs Model . Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs Model . Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs Model . Id LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs Model . Id LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)

	Id  shift 9
	.  error


state 7
	input : inputs File_end .  (1)

	.  reduce 1


state 8
	inputs : inputs Module Id . LB1 parameters RB1 LB3 var_decl init_decl trans_decl RB3  (3)
	inputs : inputs Module Id . LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl RB3  (4)

	LB1  shift 10
	.  error


state 9
	inputs : inputs Model Id . LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs Model Id . LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs Model Id . LB1 parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs Model Id . LB1 parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)

	LB1  shift 11
	.  error


state 10
	inputs : inputs Module Id LB1 . parameters RB1 LB3 var_decl init_decl trans_decl RB3  (3)
	inputs : inputs Module Id LB1 . parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl RB3  (4)
	parameters : .  (9)

	Id  shift 12
	RB1  reduce 9

	parameters  goto 13


state 11
	inputs : inputs Model Id LB1 . parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs Model Id LB1 . parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs Model Id LB1 . parameters RB1 LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs Model Id LB1 . parameters RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)
	parameters : .  (9)

	Id  shift 12
	RB1  reduce 9

	parameters  goto 14


state 12
	parameters : Id . Colon expr_type  (10)
	parameters : Id . Colon expr_type Comma parameters  (11)

	Colon  shift 15
	.  error


state 13
	inputs : inputs Module Id LB1 parameters . RB1 LB3 var_decl init_decl trans_decl RB3  (3)
	inputs : inputs Module Id LB1 parameters . RB1 LB3 var_decl symbol_decl init_decl trans_decl RB3  (4)

	RB1  shift 16
	.  error


state 14
	inputs : inputs Model Id LB1 parameters . RB1 LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs Model Id LB1 parameters . RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs Model Id LB1 parameters . RB1 LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs Model Id LB1 parameters . RB1 LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)

	RB1  shift 17
	.  error


state 15
	parameters : Id Colon . expr_type  (10)
	parameters : Id Colon . expr_type Comma parameters  (11)

	Bool  shift 18
	LB1  shift 19
	LB3  shift 20
	Id  shift 21
	.  error

	expr_type  goto 22


state 16
	inputs : inputs Module Id LB1 parameters RB1 . LB3 var_decl init_decl trans_decl RB3  (3)
	inputs : inputs Module Id LB1 parameters RB1 . LB3 var_decl symbol_decl init_decl trans_decl RB3  (4)

	LB3  shift 23
	.  error


state 17
	inputs : inputs Model Id LB1 parameters RB1 . LB3 var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs Model Id LB1 parameters RB1 . LB3 var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs Model Id LB1 parameters RB1 . LB3 var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs Model Id LB1 parameters RB1 . LB3 var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)

	LB3  shift 24
	.  error


state 18
	expr_type : Bool .  (13)

	.  reduce 13


state 19
	expr_type : LB1 . I DotDot I RB1  (12)

	I  shift 25
	.  error


state 20
	expr_type : LB3 . scalars RB3  (14)
	scalars : .  (16)

	Scalar  shift 26
	RB3  reduce 16

	scalars  goto 27


state 21
	expr_type : Id .  (15)

	.  reduce 15


state 22
	parameters : Id Colon expr_type .  (10)
	parameters : Id Colon expr_type . Comma parameters  (11)

	Comma  shift 28
	RB1  reduce 10


state 23
	inputs : inputs Module Id LB1 parameters RB1 LB3 . var_decl init_decl trans_decl RB3  (3)
	inputs : inputs Module Id LB1 parameters RB1 LB3 . var_decl symbol_decl init_decl trans_decl RB3  (4)

	Var  shift 29
	.  error

	var_decl  goto 30


state 24
	inputs : inputs Model Id LB1 parameters RB1 LB3 . var_decl init_decl trans_decl atomic_decl spec_decl RB3  (5)
	inputs : inputs Model Id LB1 parameters RB1 LB3 . var_decl symbol_decl init_decl trans_decl atomic_decl spec_decl RB3  (6)
	inputs : inputs Model Id LB1 parameters RB1 LB3 . var_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (7)
	inputs : inputs Model Id LB1 parameters RB1 LB3 . var_decl symbol_decl init_decl trans_decl atomic_decl fairness_decl spec_decl RB3  (8)

	Var  shift 29
	.  error

	var_decl  goto 31


state 25
	expr_type : LB1 I . DotDot I RB1  (12)

	DotDot  shift 32
	.  error


state 26
	scalars : Scalar . Id  (17)
	scalars : Scalar . Id Comma scalars  (18)

	Id  shift 33
	.  error


state 27
	expr_type : LB3 scalars . RB3  (14)

	RB3  shift 34
	.  error


state 28
	parameters : Id Colon expr_type Comma . parameters  (11)
	parameters : .  (9)

	Id  shift 12
	RB1  reduce 9

	parameters  goto 35


state 29
	var_decl : Var . LB3 vars RB3  (19)

	LB3  shift 36
	.  error


state 30
	inputs : inputs Module Id LB1 parameters RB1 LB3 var_decl . init_decl trans_decl RB3  (3)
	inputs : inputs Module Id LB1 parameters RB1 LB3 var_decl . symbol_decl init_decl trans_decl RB3  (4)

	Define  shift 37
	Init  shift 38
	.  error

	init_decl  goto 39
	symbol_decl  goto 40

